<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="txusblack.domilicios.CrearCuenta$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_below="@+id/section_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:id="@+id/imageView2"
        android:contentDescription="@string/img_usuario" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/n_empresa"
        android:ems="10"
        android:layout_marginTop="47dp"
        android:id="@+id/editText2"
        android:textAlignment="center"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/btsiguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/email"
        android:ems="10"
        android:id="@+id/editText3"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/direccion"
        android:ems="10"
        android:id="@+id/editText5"
        android:textAlignment="center"
        android:layout_below="@+id/editText4"
        android:layout_toEndOf="@+id/section_label"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/n_gerente"
        android:ems="10"
        android:id="@+id/editText"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nit"
        android:ems="10"
        android:layout_marginTop="8dp"
        android:id="@+id/editText4"
        android:textAlignment="center"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true" />

</RelativeLayout>
