<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="txusblack.domilicios.Login">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/titulo1"
        android:id="@+id/Titulo1"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000"/>

    <TextView
        android:text="@string/terminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Texto1"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:layout_marginBottom="17dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="textStart"
        android:autoLink="web"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Texto2"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="26sp"
        android:layout_below="@+id/Titulo1"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="11dp"
        android:layout_above="@+id/Texto1"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">


        <EditText
            android:layout_width="61dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/Sufijo"
            android:hint="@string/sufijo"
            android:textAlignment="center" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/telefono"
            android:ems="10"
            android:id="@+id/Telefono"
            android:layout_weight="0.19" />
    </LinearLayout>

    <ImageView
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/mascota"
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:adjustViewBounds="true"
        android:layout_width="270dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
