<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mapa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="txusblack.domilicios.Mapa">

    <TextView
        android:text="@string/mapa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView4"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="40sp"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/wtf"
        android:id="@+id/imageView3"
        android:contentDescription="@string/descripcion"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/en_proceso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textSize="30sp" />
</RelativeLayout>
